# EuropaLex

./: .gitignore  .phase1_state.json  AGENTS.md  README.md  _BACKUP_208460.gitignore  _BASE_208460.gitignore  _LOCAL_208460.gitignore  app.py  pyproject.toml  requirements.txt  test_imports.py
.modal/: app.py  requirements.txt
configs/: settings.yaml
core/: __init__.py  audio_gen.py  engine.py  image_gen.py  pipeline.py  test_text_engine.py  text_gen.py  types.py
docs/superpowers/plans/: 2026-06-08-gradio-frontend-demo.md  2026-06-09-local-inference-engine.md  2026-06-09-model-download-setup.md  2026-06-09-readme-and-agents.md  2026-06-09-two-phase-card-generation.md  2026-06-10-minicpm5-text-engine-implementation.md  2026-06-10-split-translation-out-of-phase-1.md  2026-06-11-llm-output-count-enforcement.md  (+17 more)
export/: __init__.py  _constants.py  anki_tunnel.py  apkg_export.py  apkg_generator.py  csv_export.py  csv_for_anki.py
frontend/css/: custom.css
frontend/ui/: cards.py  widgets.py
models/: download_models.py
models/flux/: __init__.py
models/omnivoice/: __init__.py
models/tilde-open/: __init__.py
scripts/: download_models.py  smoke_test.py  test_count_enforcement.py  test_extract_sentences.py  test_translation_retry.py
tests/: apkg_export_test.py  apkg_generator_test.py  app_test.py  audio_gen_test.py  cards_test.py  conftest.py  count_enforcement_test.py  csv_export_test.py  csv_for_anki_test.py  engine_test.py  file_response_patch_test.py  image_gen_test.py  pipeline_test.py  progression_test.py  smoke_test.py  text_gen_test.py  widgets_test.py
(+26 files in other folders)
