[project]
name = "europalex"
version = "0.1.0"
description = "Generate Anki flashcards for European languages using local AI models"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "export", "frontend", "models"]
