[project]
name = "europalex"
version = "0.1.0"
description = "Generate Anki flashcards for European languages using local AI models"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.28.0",
    "gradio>=4.0.0",
    "huggingface-hub>=1.18.0",
    "llama-cpp-python>=0.3.28",
    "omnivoice>=0.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "soundfile>=0.12.0",
    "torch>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "export", "frontend", "models"]

[tool.uv.pip]
extra-index-url = ["https://abetlen.github.io/llama-cpp-python/whl/cu124"]
